# libmobilecoin-ios-artifacts

./: .gitattributes  .gitignore  .gitmodules  Brewfile  Dockerfile  Gemfile  LibMobileCoin.podspec  Makefile  Package.resolved  Package.swift
.circleci/: config.yml
Artifacts/LibMobileCoinLibrary.xcframework/: Info.plist
Artifacts/include/: libmobilecoin_cbindgen.h  transaction.h
LibMobileCoinExample/: Package.resolved  Package.swift  README.md
LibMobileCoinExample/Sources/LibMobileCoinExample/: LibMobileCoinExample.swift
LibMobileCoinExample/Tests/LibMobileCoinExampleTests/: GRPCClientImports.swift  HTTPClientImports.swift  ProtobufImports.swift  StaticLibraryAPI.swift  TestVectorImports.swift
Sources/Common/: ledger.pb.swift  mistyswap_onramp.pb.swift
Sources/GRPC/: attest.grpc.swift  consensus_client.grpc.swift  consensus_common.grpc.swift  ledger.grpc.swift  mistyswap_common.grpc.swift  mistyswap_offramp.grpc.swift  mistyswap_onramp.grpc.swift  report.grpc.swift  view.grpc.swift
Sources/HTTP/: mistyswap_offramp.http.swift
Sources/TestVector/Util/: Bundle+TestVector.swift  BundleModule+TestVector.swift  TestVectorError.swift
libmobilecoin/: .gitattributes  Cargo.toml  Makefile  Package_template.swift  libmobilecoin_cbindgen.h  rust-toolchain
libmobilecoin/include/: libmobilecoin.h  module.modulemap  transaction.h
libmobilecoin/legacy/: legacyview.proto
libmobilecoin/src/: attest.rs  blockchain_types.rs  error.rs  fog.rs  keys.rs  lib.rs  light_client.rs  signed_contingent_input.rs  slip10.rs  transaction.rs
libmobilecoin/src/common/: rng.rs
tools/: patch-cmake.sh  unpatch-cmake.sh
